corrections for the navigation header on events - for too long event names #31

--- a/app/assets/stylesheets/navigation.less
+++ b/app/assets/stylesheets/navigation.less
@@ -67,17 +67,17 @@
   background: @header;
 	width: auto;
 	position: relative;
+  text-align: center;
 	height: 44px;
   h1{
-    bottom: 5px;
+    bottom: 8px;
 	  color: white;
 	  font-size: 16px;
 	  font-weight: 400;
-	  left: 44px;
-	  position: absolute;
-	  right: 44px;
-	  text-align: center;
-	  width: auto; 	
+	  position: relative;
+    display: inline-block;
+    text-align: center;
+	  width: 160px; 	
   }
   :before{
   	color: white;
